# ChessBlunders.org

./: .gitignore  README.md  guide.md
chessblunders-dashboard/: package-lock.json  package.json
chessblunders-dashboard/app/: page.tsx
chessblunders-dashboard/components/: AnalysesOverTimeChart.tsx  BlunderCountDistribution.tsx  CumulativeUsersChart.tsx  EngineUsageOverTime.tsx  FeedbackList.tsx  GameResultsPieChart.tsx  GamesOverTimeChart.tsx  PageViewsChart.tsx  PeriodComparison.tsx  PracticeOverTimeChart.tsx  SubscriptionStats.tsx  TopCountriesChart.tsx  TopPagesChart.tsx  UsageStatsCards.tsx
cloud-stockfish/: Dockerfile  Dockerfile.lambda  app.py  deploy.md  docker-compose.yml  guide.md  lambda_handler.py  requirements.txt  task-definition.json  test_cloud_container.py  test_lambda.py  test_local_container.py
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx
dashboard/components/: PageViewsChart.tsx  SolveAttemptsDistribution.tsx  StatCard.tsx  TopCountriesChart.tsx  UserActivityPieChart.tsx
dashboard/lib/: stripe.ts
docs/: guide.md
docs/styles/: chess.com.md  railway.md
local_python/: fix_blunders_interactive.py  pyproject.toml  stockfish_interface.py
local_python/tests/: test_engines.py  test_get_user_games.py
payments/: .env.example  README.md  _common.py  audit_subscriptions.py  check_customer.py  check_subscription.py  create_promo_code.py  deactivate_payment_links.py  delete_customer.py  expire_open_sessions.py  get_emails.py  get_user_transaction_history.py  inspect_customer.py  inspect_promos.py  link_subscription.py  list_monthly.py  list_paid_users.py  list_unsubscribed_users.py  pyproject.toml  recent_payers.py  reset_admin_account.py  update_customer_email.py
stripe/: pyproject.toml  stripe_cli.py
styles/: chesspecker.org.md  pitch.com.md  tailwind-plus.md
supabase/: pyproject.toml  supa_cli.py
testing/: README.md  pyproject.toml
testing/src/: browser.py
testing/tests/: auth.py  test_analysis_page.py  test_engine_test.py  test_game_analysis.py
vercel/: pyproject.toml  vercel_cli.py
web_app/: next.config.ts  package-lock.json  package.json
web_app/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web_app/lib/: supabase.ts  (+2 more)
website/: next.config.ts  package-lock.json
(+113 files in other folders)
