[project]
name = "chessblunders-payments"
version = "0.1.0"
description = "ChessBlunders Stripe/Supabase admin scripts"
authors = [
    {name = "Matthew Miglio",email = "matmigg0804@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "stripe",
    "python-dotenv",
    "supabase",
    "requests",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
