[tool.poetry]
name = "chessblunders-testing"
version = "0.1.0"
description = "Playwright-driven harness for inspecting chessblunders.org with a persistent Chrome profile"
authors = ["matt <matmigg0804@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.59"
tf-playwright-stealth = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
